headers/x.v


fn C.IupSetFloatId2(ih voidptr, name &i8, lin int, col int, value f32) 

pub fn iupsetfloatid2(ih voidptr, name &i8, lin int, col int, value f32)  {
	C.IupSetFloatId2(ih, name, lin, col, value)
}

fn C.IupSetDoubleId2(ih voidptr, name &i8, lin int, col int, value f64) 

pub fn iupsetdoubleid2(ih voidptr, name &i8, lin int, col int, value f64)  {
	C.IupSetDoubleId2(ih, name, lin, col, value)
}

fn C.IupSetRGBId2(ih voidptr, name &i8, lin int, col int, r u8, g u8, b u8) 

pub fn iupsetrgbid2(ih voidptr, name &i8, lin int, col int, r u8, g u8, b u8)  {
	C.IupSetRGBId2(ih, name, lin, col, r, g, b)
}

fn C.IupGetAttributeId2(ih voidptr, name &i8, lin int, col int) &i8

pub fn iupgetattributeid2(ih voidptr, name &i8, lin int, col int) &i8 {
	return C.IupGetAttributeId2(ih, name, lin, col)
}

fn C.IupGetIntId2(ih voidptr, name &i8, lin int, col int) int

pub fn iupgetintid2(ih voidptr, name &i8, lin int, col int) int {
	return C.IupGetIntId2(ih, name, lin, col)
}

fn C.IupGetFloatId2(ih voidptr, name &i8, lin int, col int) f32

pub fn iupgetfloatid2(ih voidptr, name &i8, lin int, col int) f32 {
	return C.IupGetFloatId2(ih, name, lin, col)
}

fn C.IupGetDoubleId2(ih voidptr, name &i8, lin int, col int) f64

pub fn iupgetdoubleid2(ih voidptr, name &i8, lin int, col int) f64 {
	return C.IupGetDoubleId2(ih, name, lin, col)
}

fn C.IupGetRGBId2(ih voidptr, name &i8, lin int, col int, r &u8, g &u8, b &u8) 

pub fn iupgetrgbid2(ih voidptr, name &i8, lin int, col int, r &u8, g &u8, b &u8)  {
	C.IupGetRGBId2(ih, name, lin, col, r, g, b)
}

fn C.IupSetGlobal(name &i8, value &i8) 

pub fn iupsetglobal(name &i8, value &i8)  {
	C.IupSetGlobal(name, value)
}

fn C.IupSetStrGlobal(name &i8, value &i8) 

pub fn iupsetstrglobal(name &i8, value &i8)  {
	C.IupSetStrGlobal(name, value)
}

fn C.IupGetGlobal(name &i8) &i8

pub fn iupgetglobal(name &i8) &i8 {
	return C.IupGetGlobal(name)
}

fn C.IupSetFocus(ih voidptr) voidptr

pub fn iupsetfocus(ih voidptr) voidptr {
	return C.IupSetFocus(ih)
}

fn C.IupGetFocus() voidptr

pub fn iupgetfocus() voidptr {
	return C.IupGetFocus()
}

fn C.IupPreviousField(ih voidptr) voidptr

pub fn iuppreviousfield(ih voidptr) voidptr {
	return C.IupPreviousField(ih)
}

fn C.IupNextField(ih voidptr) voidptr

pub fn iupnextfield(ih voidptr) voidptr {
	return C.IupNextField(ih)
}

fn C.IupGetCallback(ih voidptr, name &i8) Icallback

pub fn iupgetcallback(ih voidptr, name &i8) Icallback {
	return C.IupGetCallback(ih, name)
}

fn C.IupSetCallback(ih voidptr, name &i8, func Icallback) Icallback

pub fn iupsetcallback(ih voidptr, name &i8, func Icallback) Icallback {
	return C.IupSetCallback(ih, name, func)
}

[c2v_variadic]
fn C.IupSetCallbacks(ih voidptr, name &i8, func Icallback) voidptr

pub fn iupsetcallbacks(ih voidptr, name &i8, func Icallback) voidptr {
	return C.IupSetCallbacks(ih, name, func)
}

fn C.IupGetFunction(name &i8) Icallback

pub fn iupgetfunction(name &i8) Icallback {
	return C.IupGetFunction(name)
}

fn C.IupSetFunction(name &i8, func Icallback) Icallback

pub fn iupsetfunction(name &i8, func Icallback) Icallback {
	return C.IupSetFunction(name, func)
}

fn C.IupGetHandle(name &i8) voidptr

pub fn iupgethandle(name &i8) voidptr {
	return C.IupGetHandle(name)
}

fn C.IupSetHandle(name &i8, ih voidptr) voidptr

pub fn iupsethandle(name &i8, ih voidptr) voidptr {
	return C.IupSetHandle(name, ih)
}

fn C.IupGetAllNames(names &&u8, n int) int

pub fn iupgetallnames(names &&u8, n int) int {
	return C.IupGetAllNames(names, n)
}

fn C.IupGetAllDialogs(names &&u8, n int) int

pub fn iupgetalldialogs(names &&u8, n int) int {
	return C.IupGetAllDialogs(names, n)
}

fn C.IupGetName(ih voidptr) &i8

pub fn iupgetname(ih voidptr) &i8 {
	return C.IupGetName(ih)
}

fn C.IupSetAttributeHandle(ih voidptr, name &i8, ih_named voidptr) 

pub fn iupsetattributehandle(ih voidptr, name &i8, ih_named voidptr)  {
	C.IupSetAttributeHandle(ih, name, ih_named)
}

fn C.IupGetAttributeHandle(ih voidptr, name &i8) voidptr

pub fn iupgetattributehandle(ih voidptr, name &i8) voidptr {
	return C.IupGetAttributeHandle(ih, name)
}

fn C.IupSetAttributeHandleId(ih voidptr, name &i8, id int, ih_named voidptr) 

pub fn iupsetattributehandleid(ih voidptr, name &i8, id int, ih_named voidptr)  {
	C.IupSetAttributeHandleId(ih, name, id, ih_named)
}

fn C.IupGetAttributeHandleId(ih voidptr, name &i8, id int) voidptr

pub fn iupgetattributehandleid(ih voidptr, name &i8, id int) voidptr {
	return C.IupGetAttributeHandleId(ih, name, id)
}

fn C.IupSetAttributeHandleId2(ih voidptr, name &i8, lin int, col int, ih_named voidptr) 

pub fn iupsetattributehandleid2(ih voidptr, name &i8, lin int, col int, ih_named voidptr)  {
	C.IupSetAttributeHandleId2(ih, name, lin, col, ih_named)
}

fn C.IupGetAttributeHandleId2(ih voidptr, name &i8, lin int, col int) voidptr

pub fn iupgetattributehandleid2(ih voidptr, name &i8, lin int, col int) voidptr {
	return C.IupGetAttributeHandleId2(ih, name, lin, col)
}

fn C.IupGetClassName(ih voidptr) &i8

pub fn iupgetclassname(ih voidptr) &i8 {
	return C.IupGetClassName(ih)
}

fn C.IupGetClassType(ih voidptr) &i8

pub fn iupgetclasstype(ih voidptr) &i8 {
	return C.IupGetClassType(ih)
}

fn C.IupGetAllClasses(names &&u8, n int) int

pub fn iupgetallclasses(names &&u8, n int) int {
	return C.IupGetAllClasses(names, n)
}

fn C.IupGetClassAttributes(classname &i8, names &&u8, n int) int

pub fn iupgetclassattributes(classname &i8, names &&u8, n int) int {
	return C.IupGetClassAttributes(classname, names, n)
}

fn C.IupGetClassCallbacks(classname &i8, names &&u8, n int) int

pub fn iupgetclasscallbacks(classname &i8, names &&u8, n int) int {
	return C.IupGetClassCallbacks(classname, names, n)
}

fn C.IupSaveClassAttributes(ih voidptr) 

pub fn iupsaveclassattributes(ih voidptr)  {
	C.IupSaveClassAttributes(ih)
}

fn C.IupCopyClassAttributes(src_ih voidptr, dst_ih voidptr) 

pub fn iupcopyclassattributes(src_ih voidptr, dst_ih voidptr)  {
	C.IupCopyClassAttributes(src_ih, dst_ih)
}

fn C.IupSetClassDefaultAttribute(classname &i8, name &i8, value &i8) 

pub fn iupsetclassdefaultattribute(classname &i8, name &i8, value &i8)  {
	C.IupSetClassDefaultAttribute(classname, name, value)
}

fn C.IupClassMatch(ih voidptr, classname &i8) int

pub fn iupclassmatch(ih voidptr, classname &i8) int {
	return C.IupClassMatch(ih, classname)
}

fn C.IupCreate(classname &i8) voidptr

pub fn iupcreate(classname &i8) voidptr {
	return C.IupCreate(classname)
}

fn C.IupCreatev(classname &i8, params &voidptr) voidptr

pub fn iupcreatev(classname &i8, params &voidptr) voidptr {
	return C.IupCreatev(classname, params)
}

[c2v_variadic]
fn C.IupCreatep(classname &i8, first voidptr) voidptr

pub fn iupcreatep(classname &i8, first voidptr) voidptr {
	return C.IupCreatep(classname, first)
}

fn C.IupFill() voidptr

pub fn iupfill() voidptr {
	return C.IupFill()
}

fn C.IupSpace() voidptr

pub fn iupspace() voidptr {
	return C.IupSpace()
}

fn C.IupRadio(child voidptr) voidptr

pub fn iupradio(child voidptr) voidptr {
	return C.IupRadio(child)
}

[c2v_variadic]
fn C.IupVbox(child voidptr) voidptr

pub fn iupvbox(child voidptr) voidptr {
	return C.IupVbox(child)
}

fn C.IupVboxv(children &voidptr) voidptr

pub fn iupvboxv(children &voidptr) voidptr {
	return C.IupVboxv(children)
}

[c2v_variadic]
fn C.IupZbox(child voidptr) voidptr

pub fn iupzbox(child voidptr) voidptr {
	return C.IupZbox(child)
}

fn C.IupZboxv(children &voidptr) voidptr

pub fn iupzboxv(children &voidptr) voidptr {
	return C.IupZboxv(children)
}

[c2v_variadic]
fn C.IupHbox(child voidptr) voidptr

pub fn iuphbox(child voidptr) voidptr {
	return C.IupHbox(child)
}

fn C.IupHboxv(children &voidptr) voidptr

pub fn iuphboxv(children &voidptr) voidptr {
	return C.IupHboxv(children)
}

[c2v_variadic]
fn C.IupNormalizer(ih_first voidptr) voidptr

pub fn iupnormalizer(ih_first voidptr) voidptr {
	return C.IupNormalizer(ih_first)
}

fn C.IupNormalizerv(ih_list &voidptr) voidptr

pub fn iupnormalizerv(ih_list &voidptr) voidptr {
	return C.IupNormalizerv(ih_list)
}

[c2v_variadic]
fn C.IupCbox(child voidptr) voidptr

pub fn iupcbox(child voidptr) voidptr {
	return C.IupCbox(child)
}

fn C.IupCboxv(children &voidptr) voidptr

pub fn iupcboxv(children &voidptr) voidptr {
	return C.IupCboxv(children)
}

fn C.IupSbox(child voidptr) voidptr

pub fn iupsbox(child voidptr) voidptr {
	return C.IupSbox(child)
}

fn C.IupSplit(child1 voidptr, child2 voidptr) voidptr

pub fn iupsplit(child1 voidptr, child2 voidptr) voidptr {
	return C.IupSplit(child1, child2)
}

fn C.IupScrollBox(child voidptr) voidptr

pub fn iupscrollbox(child voidptr) voidptr {
	return C.IupScrollBox(child)
}

fn C.IupFlatScrollBox(child voidptr) voidptr

pub fn iupflatscrollbox(child voidptr) voidptr {
	return C.IupFlatScrollBox(child)
}

[c2v_variadic]
fn C.IupGridBox(child voidptr) voidptr

pub fn iupgridbox(child voidptr) voidptr {
	return C.IupGridBox(child)
}

fn C.IupGridBoxv(children &voidptr) voidptr

pub fn iupgridboxv(children &voidptr) voidptr {
	return C.IupGridBoxv(children)
}

[c2v_variadic]
fn C.IupMultiBox(child voidptr) voidptr

pub fn iupmultibox(child voidptr) voidptr {
	return C.IupMultiBox(child)
}

fn C.IupMultiBoxv(children &voidptr) voidptr

pub fn iupmultiboxv(children &voidptr) voidptr {
	return C.IupMultiBoxv(children)
}

fn C.IupExpander(child voidptr) voidptr

pub fn iupexpander(child voidptr) voidptr {
	return C.IupExpander(child)
}

fn C.IupDetachBox(child voidptr) voidptr

pub fn iupdetachbox(child voidptr) voidptr {
	return C.IupDetachBox(child)
}

fn C.IupBackgroundBox(child voidptr) voidptr

pub fn iupbackgroundbox(child voidptr) voidptr {
	return C.IupBackgroundBox(child)
}

fn C.IupFrame(child voidptr) voidptr

pub fn iupframe(child voidptr) voidptr {
	return C.IupFrame(child)
}

fn C.IupFlatFrame(child voidptr) voidptr

pub fn iupflatframe(child voidptr) voidptr {
	return C.IupFlatFrame(child)
}

fn C.IupImage(width int, height int, pixels &u8) voidptr

pub fn iupimage(width int, height int, pixels &u8) voidptr {
	return C.IupImage(width, height, pixels)
}

fn C.IupImageRGB(width int, height int, pixels &u8) voidptr

pub fn iupimagergb(width int, height int, pixels &u8) voidptr {
	return C.IupImageRGB(width, height, pixels)
}

fn C.IupImageRGBA(width int, height int, pixels &u8) voidptr

pub fn iupimagergba(width int, height int, pixels &u8) voidptr {
	return C.IupImageRGBA(width, height, pixels)
}

fn C.IupItem(title &i8, action &i8) voidptr

pub fn iupitem(title &i8, action &i8) voidptr {
	return C.IupItem(title, action)
}

fn C.IupSubmenu(title &i8, child voidptr) voidptr

pub fn iupsubmenu(title &i8, child voidptr) voidptr {
	return C.IupSubmenu(title, child)
}

fn C.IupSeparator() voidptr

pub fn iupseparator() voidptr {
	return C.IupSeparator()
}

[c2v_variadic]
fn C.IupMenu(child voidptr) voidptr

pub fn iupmenu(child voidptr) voidptr {
	return C.IupMenu(child)
}

fn C.IupMenuv(children &voidptr) voidptr

pub fn iupmenuv(children &voidptr) voidptr {
	return C.IupMenuv(children)
}

fn C.IupButton(title &i8, action &i8) voidptr

pub fn iupbutton(title &i8, action &i8) voidptr {
	return C.IupButton(title, action)
}

fn C.IupFlatButton(title &i8) voidptr

pub fn iupflatbutton(title &i8) voidptr {
	return C.IupFlatButton(title)
}

fn C.IupFlatToggle(title &i8) voidptr

pub fn iupflattoggle(title &i8) voidptr {
	return C.IupFlatToggle(title)
}

fn C.IupDropButton(dropchild voidptr) voidptr

pub fn iupdropbutton(dropchild voidptr) voidptr {
	return C.IupDropButton(dropchild)
}

fn C.IupFlatLabel(title &i8) voidptr

pub fn iupflatlabel(title &i8) voidptr {
	return C.IupFlatLabel(title)
}

fn C.IupFlatSeparator() voidptr

pub fn iupflatseparator() voidptr {
	return C.IupFlatSeparator()
}

fn C.IupCanvas(action &i8) voidptr

pub fn iupcanvas(action &i8) voidptr {
	return C.IupCanvas(action)
}

fn C.IupDialog(child voidptr) voidptr

pub fn iupdialog(child voidptr) voidptr {
	return C.IupDialog(child)
}

fn C.IupUser() voidptr
